--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+Options All -Indexes
 <IfModule dir_module>
     DirectoryIndex index.php index.html
 </IfModule>
@@ -8,3 +9,14 @@ AddCharset UTF-8 .html
    Header unset ETag
 </FilesMatch>
 Header set X-Content-Type-Options nosniff
+
+<IfModule mod_rewrite.c>
+# enable rewrite engine
+RewriteEngine On
+
+# if requested url does not exist pass it as path info to index.php
+RewriteRule ^$ index.php?/ [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*) index.php?/$1 [QSA,L]
+</IfModule>
