upd style & minor fixes

--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@ AddCharset UTF-8 .html
 </FilesMatch>
 Header set X-Content-Type-Options nosniff
 
-<FilesMatch "fill_db\.php|create-db\.sql|\.htaccess">
+<FilesMatch "fill_db\.php|create_tables\.sql|\.htaccess">
     Deny from all
 </FilesMatch>
 
